--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div  align="center"><img src="img/interview-dukla.png" height="257"></div>
     <span class="news">News</span>
        <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: #000000; text-align: left; ">HK Dukla Trenčín odstupuje zo súťaže</p>
-       <h4>V lige nastala ďalšia ale už žiaľ nepekná zmena. Dukla opúšťa Tipsport ligu, kvôli strate manažéra a vynechá celú 2.sezónu a nám neostáva nič iné len poďakovať za účasť v prvej sezóne, kde to Trenčín dotiahol až na striebornú medailu. Snáď sa vedeniu klubu podarí získať do ďaších sezón nového manažéra. Vedenie ligy ich návrat späť privíta s veľkou náručou. Avšak vedenie klubu je schopné privitať späť aj ich starého manažéra.</h4>
+       <h4>V lige nastala ďalšia ale už žiaľ nepekná zmena. Dukla opúšťa Tipsport ligu, kvôli strate manažéra a vynechá celú 2.sezónu a nám neostáva nič iné len poďakovať za účasť v prvej sezóne, kde to Trenčín dotiahol až na striebornú medailu. Snáď sa vedeniu klubu podarí získať do ďalších sezón nového manažéra alebo sa im podarí získať späť svojho starého manažéra. Tak či onak vedenie ligy ich návrat späť privíta s veľkou náručou. </h4>
    </div> 
 
    <div class="clanky-mobil" style="">
