--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
  <div class="clanky-mobil" style="">
     <div  align="center"><img class="mobile-responsive-img" src="img/hk-spisska-nova-ves-25_11_2019-22_20.jpg" height="350" width="500"></div>
     <span class="news">News</span>
-       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: #000000; text-align: left; ">HK SPIŠSKÁ NOVÁ VES - MAJSTER</p>
+       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: #000000; text-align: left; ">HK SPIŠSKÁ NOVÁ VES - MAJSTER 🏆</p>
        <h4>Víťazný pohár Vladimíra Dzurillu dnes nad hlavu zdvihla <b>Spišská Nová Ves</b>, ktorá sa oficiálne stáva prvým majstrom Tipsport ligy! Po výhre 2:1 na série vo finále, kde porazila <b>Trenčín</b>. Hráči Dukly si tak odnášajú strieborné medaile a <b>HC Košice</b> získali bronzovú medailu v boji o 3.miesto</h4>
    </div> 
 
