--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <article class="clanok-uvod">
         <div style=" display: block; padding-left: 50px;">
             <h1 style="text-transform: uppercase; color: white; padding-top: 250px;">GRATULUJEME</h1>
-            <h3 style="text-transform: uppercase; color: white;">Majstrom 1.sezóny sa stáva <span style="color: #f7c201">Spišská Nová Ves</span></h3>
+            <h3 style="text-transform: uppercase; color: white;">🏆Majstrom 1.sezóny sa stáva <span style="color: #f7c201">Spišská Nová Ves</span></h3>
         </div>    
     </article>
 </div>
