--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
    </div> 
 
    <div class="clanky-mobil" style="">
-    <div  align="center"><img src="img/interview-dukla.png" height="257"></div>
+    <div  align="center"><img class="mobile-responsive-img" src="img/interview-dukla.png" height="257"></div>
     <span class="news">News</span>
        <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: #000000; text-align: left; ">HK Dukla Trenčín odstupuje zo súťaže</p>
        <h4>V lige nastala ďalšia ale už žiaľ nepekná zmena. Dukla opúšťa Tipsport ligu, kvôli strate manažéra a vynechá celú 2.sezónu a nám neostáva nič iné len poďakovať za účasť v prvej sezóne, kde to Trenčín dotiahol až na striebornú medailu. Snáď sa vedeniu klubu podarí získať do ďalších sezón nového manažéra alebo sa im podarí získať späť svojho starého manažéra. Tak či onak vedenie ligy ich návrat späť privíta s veľkou náručou. </h4>
    </div> 
 
    <div class="clanky-mobil" style="">
-    <div  align="center"><img src="img/interview-bb.png" height="257"></div>
+    <div  align="center"><img class="mobile-responsive-img" src="img/interview-bb.png" height="257"></div>
     <span class="news">News</span>
        <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: #000000; text-align: left; ">Manažérske kreslo v Bystrici</p>
        <h4>Ďalšia zmena nastala na poste manažéra v Banskej Bystrici, kde vedenie klubu zmenilo manažéra. Novým manažérom klubu <b>HC `05 Banská Bystrica</b>, ktorý prešiel pracovným pohovorom sa stáva <b>steeve</b>. V turnaji prajeme veľa úspechov na mieste manažéra.</h4>
