--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
 
  <div class="clanky-mobil" style="">
     <div  align="center"><img class="mobile-responsive-img" src="img/hk-spisska-nova-ves-25_11_2019-22_20.jpg" height="350" width="500"></div>
-    <span class="news">News</span>
+    <span class="news">News</span>📢
        <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: #000000; text-align: left; ">HK SPIŠSKÁ NOVÁ VES - MAJSTER 🏆</p>
        <h4>Víťazný pohár Vladimíra Dzurillu dnes nad hlavu zdvihla <b>Spišská Nová Ves</b>, ktorá sa oficiálne stáva prvým majstrom Tipsport ligy! Po výhre 2:1 na série vo finále, kde porazila <b>Trenčín</b>. Hráči Dukly si tak odnášajú strieborné medaile a <b>HC Košice</b> získali bronzovú medailu v boji o 3.miesto</h4>
    </div> 
 
    <div class="clanky-mobil" style="">
     <div  align="center"><img class="mobile-responsive-img" src="img/interview-dukla.png" height="257"></div>
-    <span class="news">News</span>
+    <span class="news">News</span>📢
        <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: #000000; text-align: left; ">HK Dukla Trenčín odstupuje zo súťaže🛑</p>
        <h4>V lige nastala ďalšia ale už žiaľ nepekná zmena. Dukla opúšťa Tipsport ligu, kvôli strate manažéra a vynechá celú 2.sezónu a nám neostáva nič iné len poďakovať za účasť v prvej sezóne, kde to Trenčín dotiahol až na striebornú medailu. Snáď sa vedeniu klubu podarí získať do ďalších sezón nového manažéra alebo sa im podarí získať späť svojho starého manažéra. Tak či onak vedenie ligy ich návrat späť privíta s veľkou náručou. </h4>
    </div> 
 
    <div class="clanky-mobil" style="">
     <div  align="center"><img class="mobile-responsive-img" src="img/interview-bb.png" height="257"></div>
-    <span class="news">News</span>
+    <span class="news">News</span>📢
        <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: #000000; text-align: left; ">Manažérske kreslo v Bystrici</p>
        <h4>Ďalšia zmena nastala na poste manažéra v Banskej Bystrici, kde vedenie klubu zmenilo manažéra. Novým manažérom klubu <b>HC `05 Banská Bystrica</b>, ktorý prešiel pracovným pohovorom sa stáva <b>steeve</b>. V turnaji prajeme veľa úspechov na mieste manažéra.</h4>
    </div>    
