--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div  align="center"><img class="mobile-responsive-img" src="img/interview-bb.png" height="257"></div>
     <span class="news">News</span>📢
        <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: #000000; text-align: left; ">Manažérske kreslo v Bystrici</p>
-       <h4>Ďalšia zmena nastala na poste manažéra v Banskej Bystrici, kde vedenie klubu zmenilo manažéra. Novým manažérom klubu <b>HC `05 Banská Bystrica</b>, ktorý prešiel pracovným pohovorom sa stáva <b>steeve</b>. V turnaji prajeme veľa úspechov na mieste manažéra.</h4>
+       <h4>Zmena nastala na poste manažéra v Banskej Bystrici, kde vedenie klubu zmenilo manažéra. Novým manažérom klubu <b>HC `05 Banská Bystrica</b>, ktorý prešiel pracovným pohovorom sa stáva <b>steeve</b>. V turnaji prajeme veľa úspechov na mieste manažéra.</h4>
    </div>    
 
  </div> 
