--- a/schedule.html
+++ b/schedule.html
@@ -45,10 +45,10 @@
                             <th></th>
                         </thead>
                         <tbody>
-                            <tr >
-                                <td></td>
+                            <tr>
+                                <td ></td>
                                 <td id="small-logo-trencin"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Dukla Trenčín</a></td>
+                                <td style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Dukla Trenčín</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -239,7 +239,7 @@
                              <tr>
                                 <td></td>
                                 <td><img src="img/small/trencin-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Dukla Trenčín</a></td> 
+                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Dukla Trenčín</a></td> 
                                 <td></td>
                             </tr>
                            </tbody>
@@ -415,7 +415,7 @@
                             <tr>
                                 <td></td>
                                 <td><img src="img/small/trencin-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Dukla Trenčín</a></td>
+                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Dukla Trenčín</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -603,7 +603,7 @@
                              <tr>
                                 <td></td>
                                 <td><img src="img/small/trencin-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td> 
+                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td> 
                                 <td></td>
                             </tr>
                            </tbody>
@@ -779,7 +779,7 @@
                             <tr>
                                 <td></td>
                                 <td><img src="img/small/trencin-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td>
+                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -967,7 +967,7 @@
                              <tr>
                                 <td></td>
                                 <td><img src="img/small/trencin-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td> 
+                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td> 
                                 <td></td>
                             </tr>
                            </tbody>
@@ -1143,7 +1143,7 @@
                             <tr>
                                 <td></td>
                                 <td><img src="img/small/trencin-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td>
+                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -1309,7 +1309,7 @@
                              <tr>
                                 <td></td>
                                 <td><img src="img/small/trencin-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td> 
+                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td> 
                                 <td></td>
                             </tr>
                            </tbody>
@@ -1441,7 +1441,7 @@
                             <tr>
                                 <td></td>
                                 <td><img src="img/small/trencin-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td>
+                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -1585,7 +1585,7 @@
                              <tr>
                                 <td></td>
                                 <td><img src="img/small/trencin-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td> 
+                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td> 
                                 <td></td>
                             </tr>
                            </tbody>
@@ -1717,7 +1717,7 @@
                             <tr>
                                 <td></td>
                                 <td><img src="img/small/trencin-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td>
+                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -1861,7 +1861,7 @@
                              <tr>
                                 <td></td>
                                 <td><img src="img/small/trencin-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td> 
+                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td> 
                                 <td></td>
                             </tr>
                            </tbody>
@@ -1993,7 +1993,7 @@
                             <tr>
                                 <td></td>
                                 <td><img src="img/small/trencin-small.png"></td>
-                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td>
+                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
