--- a/standings.html
+++ b/standings.html
@@ -47,10 +47,9 @@
                             <th class="header">P</th>
                             <th class="header" style="padding-left: 15px;">G</th>
                             <th class="header">+/-</th>
-                            <th class="header">B</th>
-                         
-                        
+                            <th class="header" style="text-align: center;">B</th> 
                         </thead>
+
                         <tbody>
                              <tr>
                                 <td class="postupuje">1.</td>
