--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td>RW </td>
+                            <td  style="padding-top: 25px;">RW </td>
                             <td></td>
                         </tr>
                         <tr>
