--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="uvod" style="margin-top: 20px;">
    
     <div style="display: flex;">
-        <img class="mobile-responsive-img" src="img/ice-field.png" width="850" height="700">
+        <img id="skryt-pre-mobil" class="mobile-responsive-img" src="img/ice-field.png" width="850" height="700">
     </div> 
        
     <article class="formacia-tyzdna-article">
