--- a/schedule.html
+++ b/schedule.html
@@ -194,6 +194,8 @@
                             </tr>
                            </tbody>
                         </table>
+
+
                         
 
                         <br>
@@ -212,13 +214,13 @@
                                 <td></td>
                                 <td><img src="img/small/bardejov-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td>
-                                <td></td> 
+                                <td>5</td> 
                             </tr>
                              <tr>
                                 <td></td>
                                 <td><img src="img/small/zilina-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=47695"style="color: black;">Žilina</a></td> 
-                                <td></td>
+                                <td>2</td>
                             </tr>
                            </tbody>
                         </table> 
@@ -278,13 +280,13 @@
                                 <td></td>
                                 <td><img src="img/small/mikulas-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=23979" style="color: black;">Liptovský Mikuláš</a></td>
-                                <td></td> 
+                                <td>2</td> 
                             </tr>
                              <tr>
                                 <td></td>
                                 <td><img src="img/small/slovan-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=37887" style="color: black;">Slovan Bratislava</a></td> 
-                                <td></td>
+                                <td>1</td>
                             </tr>
                            </tbody>
                         </table>
@@ -344,13 +346,13 @@
                                 <td></td>
                                 <td><img src="img/small/michalovce-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29167" style="color: black;">Michalovce</a></td>
-                                <td></td> 
+                                <td>4</td> 
                             </tr>
                              <tr>
                                 <td></td>
                                 <td><img src="img/small/skalica-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991"style="color: black;">Skalica</a></td> 
-                                <td></td>
+                                <td>3</td>
                             </tr>
                            </tbody>
                         </table>
@@ -1322,7 +1324,7 @@
 
                         <table class="tabulka-zapasov">
                         <thead >
-                            <th>9.kolo&nbsp;&nbsp;&nbsp;&nbsp;5.9. Sobota</th>
+                            <th>9.kolo</th>
                             <th></th>
                             <th></th>
                             <th></th>
@@ -1344,7 +1346,7 @@
                         </table>
                         <table class="tabulka-zapasov">
                         <thead >
-                            <th>9.kolo&nbsp;&nbsp;&nbsp;&nbsp;5.9. Sobota</th>
+                            <th>&nbsp;&nbsp;&nbsp;&nbsp;5.9. Sobota</th>
                             <th></th>
                             <th></th>
                             <th></th>
@@ -1366,7 +1368,7 @@
                         </table>
                         <table class="tabulka-zapasov">
                         <thead >
-                            <th>9.kolo&nbsp;&nbsp;&nbsp;&nbsp;5.9. Sobota</th>
+                            <th>&nbsp;&nbsp;&nbsp;&nbsp;5.9. Sobota</th>
                             <th></th>
                             <th></th>
                             <th></th>
@@ -1388,7 +1390,7 @@
                         </table>
                         <table class="tabulka-zapasov">
                         <thead >
-                            <th>9.kolo&nbsp;&nbsp;&nbsp;&nbsp;5.9. Sobota</th>
+                            <th>&nbsp;&nbsp;&nbsp;&nbsp;5.9. Sobota</th>
                             <th></th>
                             <th></th>
                             <th></th>
@@ -1410,7 +1412,7 @@
                         </table>
                         <table class="tabulka-zapasov">
                         <thead >
-                            <th>9.kolo&nbsp;&nbsp;&nbsp;&nbsp;5.9. Sobota</th>
+                            <th>&nbsp;&nbsp;&nbsp;&nbsp;5.9. Sobota</th>
                             <th></th>
                             <th></th>
                             <th></th>
@@ -1432,7 +1434,7 @@
                         </table>
                         <table class="tabulka-zapasov">
                         <thead >
-                            <th>9.kolo&nbsp;&nbsp;&nbsp;&nbsp;5.9. Sobota</th>
+                            <th>&nbsp;&nbsp;&nbsp;&nbsp;5.9. Sobota</th>
                             <th></th>
                             <th></th>
                             <th></th>
@@ -1454,7 +1456,7 @@
                         </table>
                         <table class="tabulka-zapasov">
                         <thead >
-                            <th>9.kolo&nbsp;&nbsp;&nbsp;&nbsp;5.9. Sobota</th>
+                            <th>&nbsp;&nbsp;&nbsp;&nbsp;5.9. Sobota</th>
                             <th></th>
                             <th></th>
                             <th></th>
