--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
 
-<div class="uvod" style="margin-top: 20px;">
+<div class="hviezdy" style="margin-top: 20px;">
    
     <div style="display: flex;">
         <img id="skryt-pre-mobil" class="mobile-responsive-img" src="img/ice-field.png" width="850" height="700">
