--- a/index.html
+++ b/index.html
@@ -64,29 +64,37 @@
                 <table class="formacia-tabulka">
                     <tbody>
                         <tr>
-                            <td></td>
+                            <td><img id="hrac-tyzdna-pp" src="img/logo/hk_poprad.png" height="40"></td>
                             <td>RD</td>
-                            <td></td>
+                            <td>Ikku Koyanagi</td>
+                            <td>1+1</td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td><img id="hrac-tyzdna-mi" src="img/logo/hk_dukla_michalovce.png" height="40"></td>
                             <td>LD</td>
-                            <td></td>
+                            <td>Jēkabs Balodis</td>
+                            <td>0+1</td>
                         </tr>
+
+
+                       
                         <tr>
-                            <td></td>
-                            <td  style="padding-top: 25px;">RW </td>
-                            <td></td>
+                            <td  style="padding-top: 25px;"><img id="hrac-tyzdna-pp" src="img/logo/hk_poprad.png" height="40"></td>    
+                            <td  style="padding-top: 25px;">RW</td>
+                            <td  style="padding-top: 25px;">Hvedar Olsa</td>
+                            <td  style="padding-top: 25px;">3+0</td>
                         </tr>
-                        <tr>
-                            <td></td>    
+                         <tr>
+                            <td><img id="hrac-tyzdna-bb" src="img/logo/hc_05_banská_bystrica.png" height="40"></td>
                             <td>C</td>
-                            <td></td>
+                            <td>Fritz Stahel</td>
+                            <td> 0+4</td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td><img id="hrac-tyzdna-bj" src="img/logo/bardejov.png" height="40"></td>
                             <td>LW</td>
-                            <td></td>
+                            <td>Siebe Hondshoven</td>
+                            <td>2+1</td>
                         </tr>
                     </tbody>
                 </table>     
@@ -107,7 +115,15 @@
                     <tbody>
                         <tr>
                             <td><img id="hrac-tyzdna-bb" src="img/logo/hc_05_banská_bystrica.png" height="40"></td>    
-                            <td>C Fritz Stahel</td>
+                            <td>Fritz Stahel</td>
+                            <td>4</td>
+                            <td>0</td>
+                            <td>4</td>
+                        </tr>
+
+                        <tr>
+                            <td><img id="hrac-tyzdna-pp" src="img/logo/hk_poprad.png" height="40"></td>    
+                            <td>Hvedar Olsa</td>
                             <td>4</td>
                             <td>0</td>
                             <td>4</td>
