--- a/index.html
+++ b/index.html
@@ -108,25 +108,19 @@
                        
                         <th></th>
                         <th>Meno</th>
-                        <th>B</th>
-                        <th>G</th>
-                        <th>A</th>
+                        <th>Bilancia</th>
                     </thead>
                     <tbody>
                         <tr>
                             <td><img id="hrac-tyzdna-bb" src="img/logo/hc_05_banská_bystrica.png" height="40"></td>    
                             <td>Fritz Stahel</td>
-                            <td>4</td>
-                            <td>0</td>
-                            <td>4</td>
+                            <td style="text-align: center;">0+4</td>
                         </tr>
 
                         <tr>
                             <td><img id="hrac-tyzdna-pp" src="img/logo/hk_poprad.png" height="40"></td>    
                             <td>Hvedar Olsa</td>
-                            <td>4</td>
-                            <td>0</td>
-                            <td>4</td>
+                            <td style="text-align: center;">3+0</td>
                         </tr>
                       
                     </tbody>
