--- a/standings.html
+++ b/standings.html
@@ -225,7 +225,7 @@
                                 <td class="stats">-1</td>
                                 <td class="stats"><strong>0</strong></td>
                                 <td class="forma"></td>
-                                <td class="forma"><img src="img/lose.png" height="18"></td>
+                                <td class="forma"></td>
                                 <td class="forma"><img src="img/lose.png" height="18"></td>
                             </tr>
                             
