--- a/brankari.html
+++ b/brankari.html
@@ -41,7 +41,7 @@
 
 <div class="tabulka-hracov-stats" align="center" >
 
- <img id="skryt-pre-mobil" src="img/goalie.png" height="626" width="650"> 
+ <img id="skryt-pre-mobil" src="img/goalie.png"> 
 
     <div style="height: auto;">
          <div class="odkazy-stats">
