--- a/stats.html
+++ b/stats.html
@@ -46,9 +46,11 @@
     <div style="height: 650px;overflow-y: scroll; ">
 
         <div class="odkazy-stats">
-         <a href="stats.html">Hráči</a>   
-         <a href="brankari.html">Brankári</a>
-        </div> 
+            <a href="stats.html"><b class="skryt-pre-pc">Hráči</b><img id="skryt-pre-mobil" src="img/player.png" height="150"></a>  
+            
+            <a href="brankari.html"><b class="skryt-pre-pc">Brankári</b><img id="skryt-pre-mobil" src="img/goalie.png" height="150"></a>
+         </div>
+         
         <table class="statistiky-hracov">
             <tr class="bg-info" style="">
                 <th style="text-align: center;"></th>
