--- a/rules.html
+++ b/rules.html
@@ -36,7 +36,7 @@
             <div class="rules"style="display: flex;">
 
 
-                <div class="rules-article">
+                <article class="rules-article">
                     <p style="font-size: 40px"><b>Pravidlá Turnaja</b>  <img src="img/rozhodca.png" height="35"> </p>
                     <p>Začiatok turnaja = začiatok novej sezóny na HA </p>
                     <p><b>Nasledujúce pravidlá sú platné od 2.sezóny turnaja</b> </p>
@@ -70,7 +70,7 @@
                   
                    <p align="center" style="font-size: 12px;">Kontakt<a href="https://www.hockeyarena.net/sk/index.php?p=manager_manager_info.php&id=722006" style="text-decoration: none;color: white;"> DementedMate </a></p>
                    <p align="center" style="font-size: 12px;"><a href="https://www.hockeyarena.net/sk/" style="text-decoration: none;color: white;"> Hockeyarena.net</a></p>
-                </div>
+                </article>
             </div>    
 
 
