--- a/rules.html
+++ b/rules.html
@@ -57,7 +57,7 @@
                     <p>Plánovanie zápasov - <b>PLAY-OFF</b> </p>
                     <p>Tímy na <b>1.</b> až <b>8. mieste</b> postupujú do <b> štvrťfinále Play-off</b>.</p>
                     <p><b>Formát - 1v8...2v7...3v6...4v5</b></p>
-                    <p> Hrá sa na <b>Best of 3</b> (tzn. 2 víťazné zápasy). Prvý zápas doma odohrá lepšie postavený tím v tabuľke. Pri nerozhodnom stave 1:1 sa dohodnú manažéri kto odohrá tretí zápas ako domáci (<b> v stredu </b>) a následne mi to <b>ohlási</b> do PM/na fórum pre kontrolu a zapísanie do rozpisu. </p>
+                    <p> Hrá sa na <b>Best of 3</b> (tzn. 2 víťazné zápasy). Prvý zápas doma odohrá lepšie postavený tím v tabuľke. Pri nerozhodnom stave 1:1 sa dohodnú manažéri kto odohrá tretí zápas ako domáci (<b> buď v stredu alebo najbližšiu sobotu </b>) a následne mi to <b>ohlási</b> do PM/na fórum pre kontrolu a zapísanie do rozpisu. </p>
                     <p>Víťaz Play-off získava  <b style="color: #DAA520; font-family: italic; font-size: 17px;">Pohár Vladimíra Dzurillu</b> <img src="img/pohar_dzurilla.png" height="50"></p>
                 
                 
